Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Course__c/fields/Course_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Time__c</fullName>
    <label>Course Start Time</label>
    <type>DateTime</type>
</CustomField>