Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Course__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <description>A short description of this course&apos;s purpose.</description>
    <label>Synopsis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>