Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Start_Time__c</columns>
    <columns>Course_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>